@@ -3,6 +3,8 @@ yoshimi 1.3.*
 2015-2-14 Will
 - bank swaps/ID changes now in place
   but not checked for unwritable locations
+- Now checked
+- Added highlighing of current bank
 
 2015-2-13 Will
 - Basic structure complete and working
